--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,47 +1,41 @@
+<h1>Applications</h1>
 
-	<h1>Applications</h1>
+<table class="altrowstable" id="alternatecolor">
+  <tr>
+    <!--<th>Id</th>-->
+    <th>Name</th>
+    <th>Url</th>
+    <th>Provider</th>
+    <th>Status</th>
+    <!-- <th>Repository</th> -->
+    <!-- <th></th> -->
+    <!-- <th></th> -->
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% @apps.each do |app| %>
+    <tr>
+      <td><%= link_to app.name, app_path(app.name) %></td>
+      <td><%= app.url %></td>
+      <td><%= app.provider['name'] if app.provider %></td>
+      <td><%= app.status %></td>
+      <!-- <td><%= app.repository %></td> -->
+      <td><%= image_tag "play.png" %> <%= link_to 'Start', start_app_path(app.name) %></td>
+      <td><%= image_tag "stop.png" %> <%= link_to 'Stop', stop_app_path(app.name) %></td>
+      <td><%= image_tag "restart.png" %> <%= link_to 'Restart', restart_app_path(app.name) %></td>
+      <!-- <td><%= link_to 'Show', app_path(app.name) %></td> -->
+      <!-- <td><%= link_to 'Edit', edit_app_path(app.name) %></td> -->
+      <td><%= image_tag "delete.png" %> <%= link_to 'Remove', app_path(app.name), :confirm => 'Are you sure?', :method => :delete %></td>
+    </tr>
+  <% end %>
+</table>
 
-	<table class="altrowstable" id="alternatecolor">
-		<tr>
-			<!--<th>Id</th>-->
-			<th>Name</th>
-			<th>Url</th>
-			<th>Provider</th>
-			<th>Status</th>
-			<th>Repository</th>
-			<th></th>
-			<th></th>
-			<th></th>
-			<th></th>
-			<th></th>
-			<th></th>
-		</tr>
-		<% @apps.each do |app| %>
-		<tr>
-			<td><%= app.name %></td>
-			<td><%= app.url %></td>
-			<td><%= app.provider['name'] if app.provider %></td>
-			<td><%= app.status %></td>
-			<td><%= app.repository %></td>
-			<td><%= image_tag "play.png" %> <%= link_to 'Start', start_app_path(app.name) %></td>
-			<td><%= image_tag "stop.png" %> <%= link_to 'Stop', stop_app_path(app.name) %></td>
-			<td><%= image_tag "restart.png" %> <%= link_to 'Restart', restart_app_path(app.name) %></td>
-			<td><%= link_to 'Show', app_path(app.name) %></td>
-			<td><%= link_to 'Edit', edit_app_path(app.name) %></td>
-			<td><%= image_tag "delete.png" %> <%= link_to 'Remove', app_path(app.name), :confirm => 'Are you sure?', :method => :delete %></td>
-		</tr>
-		<% end %>
-	</table>
+<br />
 
-	<br />
+<div id="steps">
+  <%= link_to 'New app', new_app_path, :class => 'criar' %>
+</div>
 
-	<div id="steps">
-		<%= link_to 'New app', new_app_path, :class => 'criar' %>
-	</div>
-
-	<div class="push"></div>
-
-
-
-
-
+<div class="push"></div>
