--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -137,11 +137,11 @@ body {
   background-color: #ffffff;
 }
 a {
-  color: #0088cc;
+  color: #019AAC;
   text-decoration: none;
 }
 a:hover {
-  color: #005580;
+  color: #39C1D6;
   text-decoration: underline;
 }
 .row {
@@ -378,6 +378,7 @@ h6 small {
 h1 {
   font-size: 30px;
   line-height: 36px;
+  color:#099DBA;
 }
 h1 small {
   font-size: 18px;
@@ -643,6 +644,7 @@ select,
   height: 18px;
   padding: 4px;
   margin-bottom: 9px;
+  margin-right:5px;
   font-size: 13px;
   line-height: 18px;
   color: #555555;
@@ -2010,7 +2012,14 @@ table .span24 {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
+ background-image: -moz-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -ms-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F6F6F6), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -o-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6F6F6', endColorstr='#F6F6F6', GradientType=0);
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
   -webkit-border-radius: 4px;
@@ -2020,6 +2029,31 @@ table .span24 {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+
+.well2 {
+  min-height: 20px;
+  max-height:80px;
+  overflow:auto;
+  padding: 19px;
+  margin-bottom: 20px;
+ background-image: -moz-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -ms-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F6F6F6), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: -o-linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-image: linear-gradient(top, #F6F6F6, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6F6F6', endColorstr='#F6F6F6', GradientType=0);
+  border: 1px solid #eee;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 .well blockquote {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
@@ -2705,8 +2739,8 @@ input[type="submit"].btn.btn-mini {
   margin: 8px 1px;
   *margin: -5px 0 5px;
   overflow: hidden;
-  background-color: #e5e5e5;
-  border-bottom: 1px solid #ffffff;
+  background-color: #ccc;
+  border-bottom: 1px solid #f6f6f6;
 }
 .nav-tabs,
 .nav-pills {
@@ -2998,7 +3032,7 @@ input[type="submit"].btn.btn-mini {
   font-size: 20px;
   font-weight: 200;
   line-height: 1;
-  color: #999999;
+  color: #099DBA;
 }
 .navbar .navbar-text {
   margin-bottom: 0;
