--- a/app/views/dashboard/apps/_form.html.erb
+++ b/app/views/dashboard/apps/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="span5">
+
   <%= form_tag( {action: 'new'}, method: :get, remote: true) do %>
     <% if @app.errors.any? %>
       <div id="error_explanation">
@@ -39,7 +39,7 @@
           </div>
         </div>
 
-        <div class="well" id="rules">
+        <div class="well2" id="rules">
           <div class="control-group">
             <label class="control-label" for="appendRule">Additional rules</label>
             <div class="controls">
@@ -53,8 +53,7 @@
       </fieldset>
     </div>
   <% end %>
-</div>
-<div id="pricing-table" class="span6 center">
+<div id="pricing-table">
 </div>
 
 <% content_for :bottom_scripts do %>
