--- a/app/views/dashboard/apps/_suggested_providers.html.erb
+++ b/app/views/dashboard/apps/_suggested_providers.html.erb
@@ -1,18 +1,29 @@
 <%= form_tag( {action: 'create'}, method: :post) do %>
-  <%= hidden_field_tag 'manifest', @manifest.to_json %>
-  <%= hidden_field_tag 'id', @id %>
+ 
   <% @providers.each do |p| %>
-    <div class="row span2">
-      <h2><%= p['name'].humanize %></h2>
-      <h1>$219<small>/mo</small></h1>
-      <ul>
-        <li>Up to 150 Operators</li>
-        <li>CRM Integration</li>
-        <li>Groups</li>
-        <li>White Label</li>
-        <li>Phone Support</li>
-      </ul>
-      <%= button_tag 'Sign up', type: :submit, class: "btn btn-warning btn-large", name: "provider", value: p['name'] %>
-    </div>
+  
+
+    	<table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Uptime</th>
+          <th>Location</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+          <tr>
+            <td><%= p['name'].humanize %></td>
+            <td></td>
+            <td></td>
+            <td>
+              <%= button_tag 'Sign up', type: :submit, class: "btn btn-info btn-large", name: "provider", value: p['name'] %>
+            </td>
+          </tr>
+      </tbody>
+    </table>
+    	
+      
   <% end %>
 <% end %>
