--- a/app/views/dashboard/services/_form.html.erb
+++ b/app/views/dashboard/services/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@service) do |f| %>
+<%= form_tag(action: 'new') do %>
   <% if @service.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@service.errors.count, "error") %> prohibited this service from being saved:</h2>
@@ -12,6 +12,5 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit %>
   </div>
 <% end %>
