--- a/app/views/dashboard/services/index.html.erb
+++ b/app/views/dashboard/services/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing services</h1>
+<h2>Listing services</h2>
 
 <table>
   <tr>
@@ -9,13 +9,13 @@
 
 <% @services.each do |service| %>
   <tr>
-    <td><%= link_to 'Show', service %></td>
-    <td><%= link_to 'Edit', edit_service_path(service) %></td>
-    <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', app_service %></td>
+    <td><%= link_to 'Edit', edit_app_service_path(service) %></td>
+    <td><%= link_to 'Destroy', app_service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Service', new_service_path %>
+<%= link_to 'New Service', new_app_service_path %>
