--- a/app/views/dashboard/services/edit.html.erb
+++ b/app/views/dashboard/services/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @service %> |
+<%= link_to 'Show', app_service_path %> |
 <%= link_to 'Back', app_services_path %>
