--- a/app/views/dashboard/apps/_monitor.html.erb
+++ b/app/views/dashboard/apps/_monitor.html.erb
@@ -2,7 +2,7 @@
 <br/>
 
 <% @monitor.instances.each do |instance| %>
-  <h3>Instance #<%= instance.id %> <small><%= instance.date %></small></h3>
+  <h3>Instance #<%= instance.id %> <small><%= instance.metrics.first["entries"].first.date %></small></h3>
 
   <table class="table table-striped table-bordered table-condensed">
     <thead>
@@ -15,10 +15,101 @@
 
       <% instance.metrics.each do |metric| %>
         <tr>
-          <td><%= metric.name %></td>
-          <td><%= "#{metric.value} #{metric.unit}" %></td>
+          <td><%= metric.name.humanize %></td>
+          <td><%= "#{metric["entries"].first.value} #{metric.unit}" %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
+<% end %>
+
+<div id="container-chart" style="height: 200; min-width: 200"></div>
+
+<script>
+
+  $(function() {
+
+    Highcharts.setOptions({
+      global : {
+        useUTC : false
+      },
+      credits: {
+        enabled: false
+      }
+    });
+
+    // Create the chart
+    window.chart = new Highcharts.StockChart({
+      chart : {
+        renderTo : 'container-chart',
+        events : {
+          load : function() {
+
+            // set up the updating of the chart each second
+            var series = this.series[0];
+            setInterval(function() {
+            //  var x = 1348838434, // current time
+            //  y = 100;
+            //  //y = Math.round(Math.random() * 100);
+            //  //y = <% @monitor.instances.first.metrics.first["entries"][5].value %>;
+            //$.getJSON('monitor.json?samples=1', function(data) {
+              
+            //}
+              //series.addPoint([x, y], true, true);
+            }, 1000);
+          }
+        }
+      },
+
+      rangeSelector: {
+        buttons: [{
+          count: 1,
+          type: 'minute',
+          text: '1M'
+          }, {
+          count: 5,
+          type: 'minute',
+          text: '5M'
+          }, {
+          type: 'all',
+          text: 'All'
+        }],
+        inputEnabled: false,
+        selected: 0
+      },
+
+      title : {
+        text : 'Live memory data'
+      },
+
+      exporting: {
+        enabled: true
+      },
+
+      series : [{
+        name : 'Random data',
+        data : (function() {
+          // generate an array of random data
+          var data = [], time = (new Date()).getTime(), i;
+
+            <% @monitor.instances[0].metrics[5]["entries"].reverse!.each do |entry| %>
+              data.push([
+              <%= Integer(entry.date) * 1000 %>,
+              <%= entry.value %>
+              ]);
+            <% end %>
+
+          return data;
+        })()
+      }]
+    });
+
+  });
+</script>
+
+<% if false %>
+  <% content_for :bottom_scripts do %>
+    <%= javascript_include_tag "highstock/highstock" %>
+    <%= javascript_include_tag "highstock/exporting" %>
+  <% end %>
 <% end %>
