--- a/app/views/dashboard/apps/show.html.erb
+++ b/app/views/dashboard/apps/show.html.erb
@@ -14,7 +14,7 @@
   <ul id="appTab" class="nav nav-tabs">
     <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
     <li class=""><a href="#services" data-toggle="tab">Services</a></li>
-    <li class=""><a href="#migrate" data-toggle="tab">Scale</a></li>
+    <li class=""><a href="#scale" data-toggle="tab">Scale</a></li>
     <li class=""><a href="#migrate" data-toggle="tab">Migrate</a></li>
     <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analytics <b class="caret"></b></a>
@@ -40,9 +40,9 @@
         <dt>Memory</dt>
         <dd><%= (@app.memory.nil?) ? '-' : "#{@app.memory.value} #{@app.memory.unit}" %></dd>
         <dt>URL</dt>
-        <dd><%= (@app.url.nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : link_to(@app.url) %></dd>
+        <dd><%= (@app.url.nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : link_to(@app.url, @app.url) %></dd>
         <dt>SCM (Git)</dt>
-        <dd><%= link_to @app.repository %></dd>
+        <dd><%= link_to(@app.repository, @app.repository) %></dd>
       </dl>
       <h3>Actions</h3>
       <div class="span2"></div>
@@ -54,12 +54,16 @@
       </div>
     </div>
     <div class="tab-pane fade" id="services">
+      <div class='spinner white outlined' data-spin='spinner'></div>
     </div>
     <div class="tab-pane fade" id="scale">
+      <%= render partial: 'scale' %>
     </div>
     <div class="tab-pane fade" id="migrate">
+      <%= render partial: 'migrate' %>
     </div>
     <div class="tab-pane fade" id="monitor">
+      <div class='spinner white outlined' data-spin='spinner'></div>
     </div>
     <div class="tab-pane fade" id="logs">
       <div class='spinner white outlined' data-spin='spinner'></div>
@@ -73,7 +77,8 @@
 
 <% content_for :bottom_scripts do %>
   <%= javascript_include_tag "jquery.spinner" %>
-  <%= javascript_include_tag "google-code-prettify-rails/prettify" %>
+  <%= javascript_include_tag "highstock/highstock" %>
+  <%= javascript_include_tag "highstock/exporting" %>
 
   <script>
     $('#appTab').bind('show', function (e) {
