--- a/app/views/dashboard/services/index.html.erb
+++ b/app/views/dashboard/services/index.html.erb
@@ -9,9 +9,9 @@
 
 <% @services.each do |service| %>
   <tr>
-    <td><%= link_to 'Show', app_service %></td>
-    <td><%= link_to 'Edit', edit_app_service_path(service) %></td>
-    <td><%= link_to 'Destroy', app_service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to service.id, app_service_path(params[:app_id], service) %></td>
+    <td><%= link_to 'Edit', edit_app_service_path(params[:app_id], service) %></td>
+    <td><%= link_to 'Destroy', app_service_path(params[:app_id], service), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
