--- a/app/views/dashboard/services/show.html.erb
+++ b/app/views/dashboard/services/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= link_to 'Edit', edit_app_service_path(@service) %> |
+<%= link_to 'Edit', edit_app_service_path %> |
 <%= link_to 'Back', app_services_path %>
