--- a/app/views/dashboard/apps/show.html.erb
+++ b/app/views/dashboard/apps/show.html.erb
@@ -1,6 +1,5 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag "jquery.spinner", :media => "all" %>
-  <%= stylesheet_link_tag "google-code-prettify-rails/prettify", :media => "all" %>
 <% end %>
 
 <% content_for :content do %>
@@ -30,26 +29,26 @@
       <h3>Information</h3>
       <dl class="dl-horizontal">
         <dt>Application ID</dt>
-        <dd><%= @app.id %></dd>
+        <dd><%= @app['id'] %></dd>
         <dt>Framework</dt>
-        <dd><%= (@app.framework.nil?) ? '-' : @app.framework.titleize %></dd>
+        <dd><%= (@app['framework'].nil?) ? '-' : @app['framework'].titleize %></dd>
         <dt>Provider</dt>
-        <dd><%= (@app.provider.nil?) ? ("<span class=\"label\">Undeployed</span>".html_safe) : @app.provider.id.humanize %></dd>
+        <dd><%= (@app['provider'].nil?) ? ("<span class=\"label\">Undeployed</span>".html_safe) : @app['provider']['id'].humanize %></dd>
         <dt>Status</dt>
-        <dd><%= (@app.status.nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : @app.status.humanize %></dd>
+        <dd><%= (@app['status'].nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : @app['status'].humanize %></dd>
         <dt>Memory</dt>
-        <dd><%= (@app.memory.nil?) ? '-' : "#{@app.memory.value} #{@app.memory.unit}" %></dd>
+        <dd><%= (@app['memory'].nil?) ? '-' : "#{@app['memory']['value']} #{@app['memory']['unit']}" %></dd>
         <dt>URL</dt>
-        <dd><%= (@app.url.nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : link_to(@app.url, @app.url) %></dd>
+        <dd><%= (@app['url'].nil?) ? ("<span class=\"label label-important\">Unknown</span>".html_safe) : link_to(@app['url'], @app['url']) %></dd>
         <dt>SCM (Git)</dt>
-        <dd><%= link_to(@app.repository, @app.repository) %></dd>
+        <dd><%= link_to(@app['repository'], @app['repository']) %></dd>
       </dl>
       <h3>Actions</h3>
       <div class="span2"></div>
       <div class="span2">
         <div class="btn-group" id="switcher">
-          <%= link_to 'On', start_app_path(@app), class: 'btn', id: 'switchOn', method: :put, remote: true %>
-          <%= link_to 'Off', stop_app_path(@app), class: 'btn btn-danger', id: 'switchOff', method: :put, remote: true %>
+          <%= link_to 'On', start_app_path(@app['id']), class: 'btn', id: 'switchOn', method: :put, remote: true %>
+          <%= link_to 'Off', stop_app_path(@app['id']), class: 'btn btn-danger', id: 'switchOff', method: :put, remote: true %>
         </div>
       </div>
     </div>
@@ -85,18 +84,18 @@
       var pattern=/#.+/gi //use regex to get anchor(==selector)
       var contentID = e.target.toString().match(pattern)[0]; //get anchor
       if (contentID == '#logs') {
-        $(contentID).load('<%= url_for log_app_path(@app) %>');
+        $(contentID).load("<%= url_for log_app_path(@app['id']) %>");
       }
       else if (contentID == '#monitor') {
-        $(contentID).load('<%= url_for monitor_app_path(@app) %>');
+        $(contentID).load("<%= url_for monitor_app_path(@app['id']) %>");
       }
       else if (contentID == '#services') {
-        $(contentID).load('<%= url_for app_services_path(@app) %>');
+        $(contentID).load("<%= url_for dashboard_app_services_path(@app['id']) %>");
       }
     });
 
     $(function() {
-      if ('<%= @app.status %>' == 'running') {
+      if ("<%= @app['status'] %>" == 'running') {
         $('#switcher').attr('data-state', 1);
         $('#switcher #switchOn').toggleClass('btn-success');
         $('#switcher #switchOff').toggleClass('btn-danger');
