--- a/app/views/dashboard/apps/_form.html.erb
+++ b/app/views/dashboard/apps/_form.html.erb
@@ -20,6 +20,13 @@
         </div>
       </div>
 
+      <div class="control-group">
+        <label class="control-label" for="name">SCM Repository</label>
+        <div class="controls">
+          <%= select_tag('repository_type', options_for_select(@repository_types)) %>
+        </div>
+      </div>
+
       <!-- Runtimes -->
       <div class="control-group">
         <label class="control-label" for="runtime">Runtime</label>
